made the toggle menu button absolute

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,3 +9,10 @@
 .mtl {
     margin-top: 20px;
 }
+
+.fixed-button {
+    position: fixed;
+    bottom: 2%;
+    left: 20px;
+    z-index: 9999 !important;
+}
