--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,63 +1,25 @@
 body {
-    background-color: rgb(244, 244, 244);
+    @include background( linear-gradient(left, #272838, #2b2d41, #393549, #433545));
+    font-family: 'Raleway', sans-serif;
 }
 
-.mtxl {
-    margin-top: 50px;
+p {
+    font-size: medium !important;
 }
 
-.mtm {
-    margin-top: 10px;
+.container-padding {
+    padding: 0 20px 0 20px;
 }
 
-.mtl {
-    margin-top: 20px;
+.position-inherit {
+    position: inherit;
 }
 
-.mts {
-    margin-top: 5px;
+.jumbotron img{
 }
 
-.mll {
-    margin-left: 40px;
-}
-
-.mls {
-    margin-left: 5px;
-}
-
-.hidden {
-    visibility: hidden;
-}
-
-.bas {
-    border: solid black thin;
-}
-
-.pls {
-    padding-right: 5px;
-}
-
-.header-span {
-    font-size: 1.5em;
-}
-
-.nopadding {
-    padding: 0 !important;
-    margin: 0 !important;
-}
-
-.default-line-height {
-    line-height: normal !important;
-}
-
-.white-font {
-    color: white;
-}
-
-.profile-background {
-    border-bottom: solid white thin;
-    border-top: solid white thin;
-    padding: 10px 0 10px 0;
-    height: 70px;
+.social-network-image{
+    /*margin-right: 30px;*/
+    height: 50px;
+    width: 50px;    
 }
