navigation bar is made static & notification message is floating.

--- a/views/home.jade
+++ b/views/home.jade
@@ -16,7 +16,7 @@ html(lang='en')
       <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
       </div>
     script#login-strategy-template(type='text/template').
-      <div class="col-xs-12 col-lg-6 col-lg-offset-3">
+      <div class="col-xs-12 col-lg-6 col-lg-offset-3 mtl">
           <div class="panel panel-info">
               <div class="panel-heading">
                   <h3 class="panel-title">Login</h3>
@@ -41,7 +41,7 @@ html(lang='en')
                   </div>
               </div>
           </div>
-    .navbar.navbar-default.navbar-fixed-top.position-inherit
+    .navbar.navbar-default.navbar-fixed-top
       .container
         a.navbar-brand(href='#') Mark It
         button.navbar-toggle(data-toggle='collapse', data-target='.navHeaderCollapse')
