--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,21 +5,26 @@ body {
 
 p {
     font-size: medium !important;
+    padding: 0 5px 0 5px !important;
 }
 
 .container-padding {
     padding: 0 20px 0 20px;
 }
 
-.position-inherit {
-    position: inherit;
+.mtl {
+    margin-top: 100px;
 }
 
-.jumbotron img{
-}
-
-.social-network-image{
+.social-network-image {
     /*margin-right: 30px;*/
     height: 50px;
-    width: 50px;    
+    width: 50px;
+}
+
+.message {
+    position: fixed;
+    top: 60px;
+    left: 1px;
+    width: 100%;
 }
