--- a/views/logged-in-user-home.jade
+++ b/views/logged-in-user-home.jade
@@ -7,7 +7,7 @@ html(lang='en')
     link(rel='stylesheet', type='text/css', href='/stylesheets/bootstrap.min.css')
     link(rel='stylesheet', type='text/css', href='/stylesheets/style.css')
   body
-    .navbar.navbar-default.navbar-fixed-top.position-inherit
+    .navbar.navbar-default.navbar-fixed-top
       .container
         a.navbar-brand(href='/') Mark It
         button.navbar-toggle(data-toggle='collapse', data-target='.navHeaderCollapse')
@@ -80,12 +80,13 @@ html(lang='en')
                   a(href='/logout') Logout
     .container-fluid.container-padding
       #notify-container.row
-        .alert.alert-success.alert-dismissible(role='alert')
-          button.close(type='button', data-dismiss='alert', aria-label='Close')
-            span(aria-hidden='true') ×
-          |                     Hello 
-          strong #{displayName}!
-      #app-container.row
+        .col-xs-12.col-lg-12.message
+          .alert.alert-info.alert-dismissible(role='alert')
+            button.close(type='button', data-dismiss='alert', aria-label='Close')
+              span(aria-hidden='true') ×
+            |                     Welcome 
+            strong #{displayName}!
+      #app-container.row.mtl
         .jumbotron
           h1 Mark It!
           p A free responsive web application for attendance tracking system.
