--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -16,6 +16,10 @@ p {
     margin-top: 100px;
 }
 
+.mts {
+    margin-top: 20px;
+}
+
 .social-network-image {
     /*margin-right: 30px;*/
     height: 50px;
