--- a/views/logged-in-user-home.jade
+++ b/views/logged-in-user-home.jade
@@ -7,10 +7,10 @@ html(lang='en', ng-app='mark-it')
     link(rel='stylesheet', type='text/css', href='/stylesheets/bootstrap.min.css')
     link(rel='stylesheet', type='text/css', href='/stylesheets/style.css')
   body
-    .container-fluid.container-padding
+    .container-fluid
       .row
         .col-xs-12.col-lg-12
-          .navbar.navbar-default.navbar-fixed-top
+          .navbar.navbar-default
             .container
               a.navbar-brand(href='/') Mark It
               button.navbar-toggle(data-toggle='collapse', data-target='.navHeaderCollapse')
@@ -82,33 +82,46 @@ html(lang='en', ng-app='mark-it')
                       li
                         a(href='/logout') Logout
       #notify-container.row
-        .col-xs-12.col-lg-12.message
+        .col-xs-12.col-lg-12
           .alert.alert-info.alert-dismissible(role='alert')
             button.close(type='button', data-dismiss='alert', aria-label='Close')
               span(aria-hidden='true') ×
             |  Welcome 
             strong #{DisplayName}!
-      #app-container.row.mtl(ng-controller='UserProfileController as user')
-        .col-xs-12.col-lg-8.col-lg-offset-2.mtl
-          .panel.panel-primary
-            .panel-heading
-              h3.panel-title User Details
-            .panel-body.text-center
-              .row.mts
-                .col-xs-12.col-lg-12
-                  .input-group
-                    span#basic-addon1.input-group-addon User Name
-                    input.form-control(type='text', placeholder='Username', aria-describedby='basic-addon1', ng-model='user.model.DisplayName')
-              .row.mts
-                .col-xs-12.col-lg-12
-                  .input-group
-                    span#basic-addon1.input-group-addon Email Id
-                    input.form-control(type='text', placeholder='Username', aria-describedby='basic-addon1', ng-model='user.model.Email')
-              .row.mts
-                .col-xs-12.col-lg-12
-                  .input-group
-                    span#basic-addon1.input-group-addon User Id
-                    input.form-control(type='text', placeholder='Username', aria-describedby='basic-addon1', ng-model='user.model.Id')
+            |  Update your profile.
+      #app-container.row(ng-controller='UserProfileController as user')
+        .col-xs-12.col-lg-6.col-lg-offset-3.app-background
+          ul.nav.nav-tabs.pts
+            li.active(role='presentation')
+              a(href='#') Profile
+            li(role='presentation')
+              a(href='#') Address
+            li(role='presentation')
+              a(href='#') Messages
+          .row.mts
+            .col-xs-12.col-lg-10.col-lg-offset-1
+              label(for='user-name') User Name
+              input#user-name.form-control(type='text', placeholder='e.g. cool_john')
+          .row.mts
+            .col-xs-12.col-lg-10.col-lg-offset-1
+              label(for='display-name') Display Name
+              input#display-name.form-control(type='text', disabled='disabled', ng-model= "user.model.DisplayName")
+          .row.mts
+            .col-xs-12.col-lg-10.col-lg-offset-1
+              label(for='email-id') Email Id
+              input#email-id.form-control(type='text', disabled='disabled', ng-model= "user.model.Email")
+          .row.mts
+            .col-xs-12.col-lg-10.col-lg-offset-1
+              label(for='user-role') User Role
+              select#user-role.form-control
+                option Select Role
+                option Admin
+                option Teacher
+                option Student
+                option Parent
+          .row.mtl.pbs
+            .col-xs-12.col-lg-10.col-lg-offset-1
+              input#btn-save-profile.form-control.btn.btn-primary(type='button', value="Update Profile")
       script(type='text/javascript', src='/javascripts/libraries/jquery.min.js')
       script(type='text/javascript', src='/javascripts/libraries/angular.min.js')
       script(type='text/javascript', src='/javascripts/libraries/bootstrap.min.js')
