--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -25,11 +25,11 @@ p {
 }
 
 .mtl {
-    margin-top: 40px;
+    padding-top: 40px;
 }
 
 .mts {
-    margin-top: 20px;
+    padding-top: 20px;
 }
 
 .social-network-image {
