Changed the folder structure to support bootstrap glymphicons.

--- a/public/partials/student-attendsnce-list.html
+++ b/public/partials/student-attendsnce-list.html
@@ -16,7 +16,8 @@
                     <td>{{model.IsPresent}}</td>
                     <td>{{model.Note}}</td>
                     <td>
-                        <button class="btn btn-danger" id="btn-remove-student" ng-click="attrept.removeSelectedRow(model)">Remove</button>
+                        <span class="glyphicon glyphicon-trash"></span>
+                        <!-- <button class="btn btn-danger" id="btn-remove-student" ng-click="attrept.removeSelectedRow(model)">Remove</button> -->
                     </td>
                 </tr>
             </tbody>
