--- a/public/partials/student-attendsnce-list.html
+++ b/public/partials/student-attendsnce-list.html
@@ -1,10 +1,10 @@
-<div class="col-xs-12 col-lg-8 col-lg-offset-2" ng-controller="AttendanceReportController as attrept">
+<div class="col-xs-12 col-lg-8 col-lg-offset-2 mts mbl" ng-controller="AttendanceReportController as attrept">
     <table class="table table-hover table-bordered text-center">
         <tdead>
             <tr>
                 <th class="text-center">Id</th>
                 <th class="text-center">Date</th>
-                <th class="text-center">Attendance Status</th>
+                <th class="text-center">Status</th>
                 <th class="text-center">Note</th>
                 <th class="text-center">Actions</th>
             </tr>
@@ -13,11 +13,10 @@
                 <tr ng-repeat="model in attrept.Collection">
                     <td><a href="#/student-attendsnce-list/details/{{model.StudentId}}">{{$index+1}}</a></td>
                     <td>{{model.Date}}</td>
-                    <td>{{model.IsPresent}}</td>
+                    <td>{{attrept.getStatus(model)}}</td>
                     <td>{{model.Note}}</td>
                     <td>
-                        <span class="glyphicon glyphicon-trash"></span>
-                        <!-- <button class="btn btn-danger" id="btn-remove-student" ng-click="attrept.removeSelectedRow(model)">Remove</button> -->
+                        <span class="glyphicon glyphicon-trash pointer" ng-click="attrept.removeSelectedRow(model)"></span>
                     </td>
                 </tr>
             </tbody>
