re-factored server routes for response structure.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,6 +36,10 @@ p {
     margin-top: 20px;
 }
 
+.mtxs {
+    margin-top: 10px;
+}
+
 .social-network-image {
     /*margin-right: 30px;*/
     height: 50px;
