--- a/public/partials/student-details.html
+++ b/public/partials/student-details.html
@@ -1,4 +1,7 @@
-<div class="col-xs-12 col-lg-6 col-lg-offset-3" ng-controller="AttendanceDetailsController as sadc">
+<div class="col-xs-12 col-lg-6 col-lg-offset-3" ng-hide="ctrl.Model">
+    <h3 class="text-center">Student data is not available!</h3>
+</div>
+<div class="col-xs-12 col-lg-6 col-lg-offset-3" ng-show="ctrl.Model">
     <div class="row">
         <div class="col-xs-12 col-lg-10 col-lg-offset-1 text-center">
             <h3>Student Details</h3>
@@ -7,19 +10,19 @@
     <div class="row">
         <div class="col-xs-12 col-lg-10 col-lg-offset-1">
             <label for="display-name">First Name</label>
-            <input id="display-name" type="text" disabled="disabled" class="form-control col-xs-12 col-lg-4" ng-model="sadc.Model.FirstName">
+            <input id="display-name" type="text" disabled="disabled" class="form-control col-xs-12 col-lg-4" ng-model="ctrl.Model.FirstName">
         </div>
     </div>
     <div class="row mts">
         <div class="col-xs-12 col-lg-10 col-lg-offset-1">
             <label for="email-id">Last Name</label>
-            <input id="email-id" type="text" disabled="disabled" class="form-control col-xs-12 col-lg-4" ng-model="sadc.Model.LastName">
+            <input id="email-id" type="text" disabled="disabled" class="form-control col-xs-12 col-lg-4" ng-model="ctrl.Model.LastName">
         </div>
     </div>
     <div class="row mts">
         <div class="col-xs-12 col-lg-10 col-lg-offset-1">
             <label for="user-name">Class</label>
-            <input id="user-name" type="text" disabled="disabled" class="form-control col-xs-12 col-lg-4" ng-model="sadc.Model.DivisionDetails">
+            <input id="user-name" type="text" disabled="disabled" class="form-control col-xs-12 col-lg-4" ng-model="ctrl.Model.DivisionDetails">
         </div>
     </div>
 </div>
