added student list and add new student views.

--- a/public/partials/student-list.html
+++ b/public/partials/student-list.html
@@ -1,14 +1,14 @@
 <div class="col-xs-12 col-lg-8 col-lg-offset-2" ng-hide="ctrl.Collection.length">
     <div class="row">
         <div class="col-xs-12 col-lg-12">
-            <h3 class="text-center">Attendance details are not available!</h3>
+            <h3 class="text-center">Student details are not available!</h3>
         </div>
     </div>
 </div>
 <div class="col-xs-12 col-lg-8 col-lg-offset-2" ng-show="ctrl.Collection.length">
     <div class="row">
         <div class="col-xs-12 col-lg-12">
-            <h3 class="text-center">Attendance Details</h3>
+            <h3 class="text-center">Student Details</h3>
         </div>
     </div>
     <div class="row">
@@ -17,18 +17,18 @@
                 <thead>
                     <tr>
                         <th class="text-center">Id</th>
-                        <th class="text-center">Date</th>
-                        <th class="text-center">Status</th>
-                        <th class="text-center">Note</th>
+                        <th class="text-center">Name</th>
+                        <th class="text-center">Class</th>
+                        <th class="text-center">Division</th>
                         <th class="text-center">Actions</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr ng-repeat="model in ctrl.Collection">
-                        <td><a href="#/students/{{model.StudentId}}">{{$index+1}}</a></td>
-                        <td>{{model.Date | date:'yyyy-MM-dd'}}</td>
-                        <td>{{ctrl.getStatus(model)}}</td>
-                        <td>{{model.Note}}</td>
+                        <td><a href="#/students/{{model._id}}">{{$index+1}}</a></td>
+                        <td>{{ctrl.getFullName(model)}}</td>
+                        <td>{{model.Class}}</td>
+                        <td>{{model.Division}}</td>
                         <td>
                             <span class="glyphicon glyphicon-trash pointer" ng-click="ctrl.removeSelectedRow(model)"></span>
                         </td>
