--- a/public/partials/new-attendance.html
+++ b/public/partials/new-attendance.html
@@ -9,7 +9,7 @@
             <h3>Attendance - {{ctrl.AttendanceDate | date: "dd MMM yyyy"}}</h3>
         </div>
         <div class="col-xs-12 col-lg-6">
-            <button class="btn btn-primary col-lg-4 col-lg-offset-7 mtxs" ng-click="ctrl.saveDetails()">Submit Report</button>
+            <button class="btn btn-primary btn-link col-lg-4 col-lg-offset-7 mts" ng-click="ctrl.saveDetails()">Submit Attendance</button>
         </div>
     </div>
     <div class="row" ng-show="ctrl.Collection.length">
