--- a/public/partials/new-student.html
+++ b/public/partials/new-student.html
@@ -1,31 +1,73 @@
-<div class="col-lg-12">
-    <div class="row mts">
-        <div class="col-lg-6 col-lg-offset-3">
+<div class="col-lg-3 col-lg-offset-1">
+    <div class="row text-center">
+        <div class="col-lg-12">
+            <h3>Add New Student</h3>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-12">
             <label for="email-id">First Name</label>
             <input id="email-id" type="text" class="form-control" ng-model="ctrl.Student.FirstName">
         </div>
     </div>
     <div class="row mts">
-        <div class="col-lg-6 col-lg-offset-3">
+        <div class="col-lg-12">
             <label for="email-id">Last Name</label>
             <input id="email-id" type="text" class="form-control" ng-model="ctrl.Student.LastName">
         </div>
     </div>
     <div class="row mts">
-        <div class="col-lg-6 col-lg-offset-3">
+        <div class="col-lg-12">
             <label for="email-id">Class</label>
             <input id="email-id" type="text" class="form-control" ng-model="ctrl.Student.Class">
         </div>
     </div>
     <div class="row mts">
-        <div class="col-lg-6 col-lg-offset-3">
+        <div class="col-lg-12">
             <label for="email-id">Division</label>
             <input id="email-id" type="text" class="form-control" ng-model="ctrl.Student.Division">
         </div>
     </div>
     <div class="row mtl">
-        <div class="col-lg-6 col-lg-offset-3">
-            <button class="btn btn-primary col-lg-4 col-lg-offset-8" ng-click="ctrl.addStudent()">Save Student Data</button>
+        <div class="col-lg-12">
+            <button class=" btn btn-primary col-lg-6 col-lg-offset-1" ng-click="ctrl.addStudent()">Add New Student</button>
+            <button class="btn btn-primary col-lg-4 col-lg-offset-1" ng-click="ctrl.saveStudents()">Save List</button>
+        </div>
+    </div>
+</div>
+<div class="col-lg-6 col-lg-offset-1">
+    <div class="row text-center">
+        <div class="col-lg-12">
+            <h3>Added Students</h3>
+        </div>
+    </div>
+    <div class="row mts text-center" ng-hide="ctrl.StudentList.length">
+        <h3>No students added yet!</h3>
+    </div>
+    <div class="row mts" ng-show="ctrl.StudentList.length">
+        <div class="col-lg-12">
+            <table class="table table-hover table-bordered text-center">
+                <thead>
+                    <tr>
+                        <th class="text-center">Id</th>
+                        <th class="text-center">Name</th>
+                        <th class="text-center">Class</th>
+                        <th class="text-center">Division</th>
+                        <th class="text-center">Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr ng-repeat="model in ctrl.StudentList">
+                        <td>{{$index+1}}</td>
+                        <td>{{ctrl.getFullName(model)}}</td>
+                        <td>{{model.Class}}</td>
+                        <td>{{model.Division}}</td>
+                        <td>
+                            <span class="glyphicon glyphicon-trash pointer" ng-click="ctrl.removeSelectedRow(model)"></span>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
