--- a/public/partials/new-student.html
+++ b/public/partials/new-student.html
@@ -31,7 +31,6 @@
     <div class="row mtl">
         <div class="col-lg-12">
             <button class=" btn btn-primary col-lg-6 col-lg-offset-1" ng-click="ctrl.addStudent()">Add New Student</button>
-            <button class="btn btn-primary col-lg-4 col-lg-offset-1" ng-click="ctrl.saveStudents()">Save List</button>
         </div>
     </div>
 </div>
@@ -68,6 +67,11 @@
                     </tr>
                 </tbody>
             </table>
+        </div>
+    </div>
+    <div class="row" ng-show="ctrl.StudentList.length">
+        <div class="col-lg-12">
+            <button class="btn btn-primary col-lg-2 col-lg-offset-10" ng-click="ctrl.saveStudents()">Save List</button>
         </div>
     </div>
 </div>
