--- a/public/partials/student-list.html
+++ b/public/partials/student-list.html
@@ -13,7 +13,7 @@
     </div>
     <div class="row">
         <div class="col-xs-12 col-lg-12">
-            <table class="table table-hover table-bordered text-center">
+            <table class="table table-hover table-bordered table-condensed text-center">
                 <thead>
                     <tr>
                         <th class="text-center">Id</th>
