--- a/public/partials/new-attendance.html
+++ b/public/partials/new-attendance.html
@@ -13,7 +13,7 @@
         </div>
     </div>
     <div class="row" ng-show="ctrl.Collection.length">
-        <table class="table table-hover table-bordered text-center">
+        <table class="table table-hover table-bordered table-condensed text-center">
             <thead>
                 <tr>
                     <th class="text-center">Id</th>
