--- a/public/partials/new-student.html
+++ b/public/partials/new-student.html
@@ -28,9 +28,9 @@
             <input id="email-id" type="text" class="form-control" ng-model="ctrl.Student.Division">
         </div>
     </div>
-    <div class="row mtl">
+    <div class="row mts">
         <div class="col-lg-12">
-            <button class=" btn btn-primary col-lg-6 col-lg-offset-1" ng-click="ctrl.addStudent()">Add New Student</button>
+            <button class=" btn btn-primary col-lg-6 col-lg-offset-6" ng-click="ctrl.addStudent()">Add New Student</button>
         </div>
     </div>
 </div>
