--- a/public/partials/attendance-report.html
+++ b/public/partials/attendance-report.html
@@ -1,11 +1,11 @@
-<div class="col-xs-12 col-lg-8 col-lg-offset-2" ng-hide="ctrl.Collection.length">
+<div class="col-xs-12 col-lg-8 col-lg-offset-2" ng-hide="ctrl.AttendanceCollection.length" ng-init="ctrl.getAttendanceDetails()">
     <div class="row">
         <div class="col-xs-12 col-lg-12">
             <h3 class="text-center">Attendance details are not available!</h3>
         </div>
     </div>
 </div>
-<div class="col-xs-12 col-lg-8 col-lg-offset-2" ng-show="ctrl.Collection.length">
+<div class="col-xs-12 col-lg-8 col-lg-offset-2" ng-show="ctrl.AttendanceCollection.length">
     <div class="row">
         <div class="col-xs-12 col-lg-12">
             <h3 class="text-center">Attendance Details</h3>
@@ -25,7 +25,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr ng-repeat="model in ctrl.Collection" ng-class="model.IsPresent ? '' : 'warning'">
+                    <tr ng-repeat="model in ctrl.AttendanceCollection" ng-class="model.IsPresent ? '' : 'warning'">
                         <td>{{$index+1}}</td>
                         <td>
                             <a href="#/students/{{model.StudentId._id}}"> {{ctrl.getStudentName(model)}}</a>
