--- a/public/partials/new-attendance.html
+++ b/public/partials/new-attendance.html
@@ -1,10 +1,10 @@
-<div class="col-xs-12 col-lg-8 col-lg-offset-2">
-    <div class="row" ng-hide="ctrl.Collection.length">
+<div class="col-xs-12 col-lg-8 col-lg-offset-2" ng-init="ctrl.getStudentList()">
+    <div class="row" ng-hide="ctrl.StudentCollection.length">
         <div class="col-xs-12 col-lg-12">
             <h3 class="text-center">Students data is not available!</h3>
         </div>
     </div>
-    <div class="row" ng-show="ctrl.Collection.length">
+    <div class="row" ng-show="ctrl.StudentCollection.length">
         <div class="col-xs-12 col-lg-6">
             <h3>Attendance - {{ctrl.AttendanceDate | date: "dd MMM yyyy"}}</h3>
         </div>
@@ -12,7 +12,7 @@
             <button class="btn btn-primary btn-link col-lg-4 col-lg-offset-7 mts" ng-click="ctrl.saveDetails()">Submit Attendance</button>
         </div>
     </div>
-    <div class="row" ng-show="ctrl.Collection.length">
+    <div class="row" ng-show="ctrl.StudentCollection.length">
         <table class="table table-hover table-bordered table-condensed text-center">
             <thead>
                 <tr>
@@ -23,9 +23,9 @@
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="model in ctrl.Collection">
+                <tr ng-repeat="model in ctrl.StudentCollection">
                     <td>{{$index+1}}</td>
-                    <td> {{ctrl.getFullName(model)}}</td>
+                    <td> {{ctrl.getFullStudentName(model)}}</td>
                     <td>
                         <input type="checkbox" class="form-control input-sm" ng-model="model.IsPresent">
                     </td>
