--- a/public/partials/new-student.html
+++ b/public/partials/new-student.html
@@ -7,25 +7,25 @@
     <div class="row">
         <div class="col-lg-12">
             <label for="email-id">First Name</label>
-            <input id="email-id" type="text" class="form-control" ng-model="ctrl.Student.FirstName">
+            <input id="email-id" type="text" class="form-control" ng-model="ctrl.Model.FirstName">
         </div>
     </div>
     <div class="row mts">
         <div class="col-lg-12">
             <label for="email-id">Last Name</label>
-            <input id="email-id" type="text" class="form-control" ng-model="ctrl.Student.LastName">
+            <input id="email-id" type="text" class="form-control" ng-model="ctrl.Model.LastName">
         </div>
     </div>
     <div class="row mts">
         <div class="col-lg-12">
             <label for="email-id">Class</label>
-            <input id="email-id" type="text" class="form-control" ng-model="ctrl.Student.Class">
+            <input id="email-id" type="text" class="form-control" ng-model="ctrl.Model.Class">
         </div>
     </div>
     <div class="row mts">
         <div class="col-lg-12">
             <label for="email-id">Division</label>
-            <input id="email-id" type="text" class="form-control" ng-model="ctrl.Student.Division">
+            <input id="email-id" type="text" class="form-control" ng-model="ctrl.Model.Division">
         </div>
     </div>
     <div class="row mts">
@@ -40,10 +40,10 @@
             <h3>Added Students</h3>
         </div>
     </div>
-    <div class="row mts text-center" ng-hide="ctrl.StudentList.length">
+    <div class="row mts text-center" ng-hide="ctrl.Collection.length">
         <h3>No students added yet!</h3>
     </div>
-    <div class="row mts" ng-show="ctrl.StudentList.length">
+    <div class="row mts" ng-show="ctrl.Collection.length">
         <div class="col-lg-12">
             <table class="table table-hover table-bordered text-center">
                 <thead>
@@ -56,7 +56,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr ng-repeat="model in ctrl.StudentList">
+                    <tr ng-repeat="model in ctrl.Collection">
                         <td>{{$index+1}}</td>
                         <td>{{ctrl.getFullName(model)}}</td>
                         <td>{{model.Class}}</td>
@@ -69,9 +69,9 @@
             </table>
         </div>
     </div>
-    <div class="row" ng-show="ctrl.StudentList.length">
+    <div class="row" ng-show="ctrl.Collection.length">
         <div class="col-lg-12">
-            <button class="btn btn-primary col-lg-2 col-lg-offset-10" ng-click="ctrl.saveStudents()">Save List</button>
+            <button class="btn btn-primary col-lg-2 col-lg-offset-10" ng-click="ctrl.saveStudentList()">Save List</button>
         </div>
     </div>
 </div>
