--- a/public/partials/student-details.html
+++ b/public/partials/student-details.html
@@ -1,4 +1,4 @@
-<div class="col-xs-12 col-lg-6 col-lg-offset-3" ng-hide="ctrl.Model">
+<div class="col-xs-12 col-lg-6 col-lg-offset-3" ng-hide="ctrl.Model" ng-init="ctrl.getStudentDetails()">
     <h3 class="text-center">Student data is not available!</h3>
 </div>
 <div class="col-xs-12 col-lg-6 col-lg-offset-3" ng-show="ctrl.Model">
