--- a/public/partials/student/details.html
+++ b/public/partials/student/details.html
@@ -22,7 +22,7 @@
     <div class="row mts">
         <div class="col-xs-12 col-lg-10 col-lg-offset-1">
             <label for="user-name">Class</label>
-            <input id="user-name" type="text" disabled="disabled" class="form-control col-xs-12 col-lg-4" ng-model="ctrl.Model.DivisionDetails">
+            <input id="user-name" type="text" disabled="disabled" class="form-control col-xs-12 col-lg-4" ng-model="ctrl.Model.Class">
         </div>
     </div>
 </div>
