--- a/public/partials/student/new.html
+++ b/public/partials/student/new.html
@@ -1,4 +1,4 @@
-<div class="col-lg-3 col-lg-offset-1">
+<div class="col-lg-3 col-lg-offset-1" ng-init="ctrl.getClassRooms()">
     <div class="row text-center">
         <div class="col-lg-12">
             <h3>Add New Student</h3>
@@ -19,13 +19,13 @@
     <div class="row mts">
         <div class="col-lg-12">
             <label for="email-id">Class</label>
-            <input id="email-id" type="text" class="form-control" ng-model="ctrl.Model.Class">
+            <select class="form-control" ng-options="class as class.Name for class in ctrl.ClassRooms track by class._id" ng-model="ctrl.SelectedClass"></select>
         </div>
     </div>
     <div class="row mts">
         <div class="col-lg-12">
-            <label for="email-id">Division</label>
-            <input id="email-id" type="text" class="form-control" ng-model="ctrl.Model.Division">
+            <label for="email-id">Roll Number</label>
+            <input id="email-id" type="text" class="form-control" ng-model="ctrl.Model.RollNumber">
         </div>
     </div>
     <div class="row mts">
@@ -51,7 +51,7 @@
                         <th class="text-center">Id</th>
                         <th class="text-center">Name</th>
                         <th class="text-center">Class</th>
-                        <th class="text-center">Division</th>
+                        <th class="text-center">Roll Number</th>
                         <th class="text-center">Actions</th>
                     </tr>
                 </thead>
@@ -60,7 +60,7 @@
                         <td>{{$index+1}}</td>
                         <td>{{ctrl.getFullName(model)}}</td>
                         <td>{{model.Class}}</td>
-                        <td>{{model.Division}}</td>
+                        <td>{{model.RollNumber}}</td>
                         <td>
                             <span class="glyphicon glyphicon-trash pointer" ng-click="ctrl.removeSelectedRow(model)"></span>
                         </td>
