--- a/public/partials/student/new.html
+++ b/public/partials/student/new.html
@@ -28,9 +28,9 @@
             <input id="email-id" type="text" class="form-control" ng-model="ctrl.Model.RollNumber">
         </div>
     </div>
-    <div class="row mts">
+    <div class="row mtl">
         <div class="col-lg-12">
-            <button class=" btn btn-primary col-lg-6 col-lg-offset-6" ng-click="ctrl.addStudent()">Add New Student</button>
+            <button class=" btn btn-primary col-lg-12" ng-click="ctrl.addStudent()">Add New Student</button>
         </div>
     </div>
 </div>
@@ -71,7 +71,7 @@
     </div>
     <div class="row" ng-show="ctrl.Collection.length">
         <div class="col-lg-12">
-            <button class="btn btn-primary col-lg-2 col-lg-offset-10" ng-click="ctrl.saveStudentList()">Save List</button>
+            <button class="btn btn-primary col-lg-4 col-lg-offset-8" ng-click="ctrl.saveStudentList()">Save List</button>
         </div>
     </div>
 </div>
